chore(backend): remove DataMigration, add V3 Flyway script, remove deprecated enums